Changes in the files